@@ -41,6 +41,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
   * Add a new dpkg-buildflags qa feature area:
     - Add a new bug feature, disabled by default, which will enable fatal
       warnings for code that can pose actual problems. Closes: #682659
+    - Add a new canary feature, disabled by default, which will allow tracking
+      build flags propagation. Closes: #628516
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
